--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('https://pixabay.com/illustrations/circuit-board-chipset-conductors-8221377/'); /* Replace with your image path */
+    background-image: url('https://cdn.pixabay.com/photo/2023/08/29/13/30/circuit-board-8221377_1280.png'); /* Replace with your image path */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
