--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
